environments/who.rwx.dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoogle-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: "who.rwx.dev"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - who.rwx.dev
      secretName: tls-cert
  rules:
    - host: "who.rwx.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoogle-service
                port:
                  name: whoogle-http
